# metric_metar_on_discord

./: .dockerignore  .gitignore  .gitmodules  Doc_Type.py  Dockerfile  airport_info.py  change_format.py  change_format_RMK.py  docker-compose.yaml  init_DB.py  licence.md  main.py  main_outer.py  md_style.css  process_METAR.py  process_TAF.py  pyproject.toml  readme.md  readme.txt  readme.typ  remove_unnecessary_whitespaces.py  requirements.txt  split.py  weather_minimums.py
.github/workflows/: on tag deploy on Github.yaml  on-tag-create-release.yaml
change_Format_/: HGT.py  QNH.py  RVR.py  TXTN.py  USA_codes.py  change.py  clouds.py  met_report_time.py  runway_state_message.py  temp_dew.py  time.py  validity.py  visibility.py  visibility_vertical.py  weather.py  wind.py
change_format_/: HGT.py  TXTN.py  change.py  clouds.py  wind.py
src/: DB_Type.py  Doc_Type.py  Server.py  Station.py  aerodrome_info.py  change_format.py  change_format_RMK.py  discord_bot_channel_names.config  init_DB.py  main.py  main_outer.py  process_METAR_TAF.py  weather_minimums.py
src/change_format_/: HGT.py  QNH.py  RVR.py  TXTN.py  USA_codes.py  change.py  clouds.py  met_report_time.py  runway_state_message.py  temp_dew.py  validity.py  visibility.py  visibility_vertical.py  weather.py  wind.py
