[tool.poetry]
authors     = ["9FS <pray4spam@googlemail.com>"]
description = ""
license     = "CC BY-NC-SA 4.0"
name        = "Metric METAR for Discord"
readme      = "readme.md"
repository  = "https://github.com/9-FS/2022-01-26-Metric-METAR-for-Discord"
version     = "1.0.0"

[tool.poetry.dependencies]
KFS        = "^1.0.0"
discord    = "^2.3.2"
jsonpickle = "^3.0.2"
pandas     = "^2.1.0"
python     = "^3.11.0, <3.13"
requests   = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
