[tool.poetry]
authors      = ["9FS <pray4spam@googlemail.com>"]
description  = ""
license      = "CC BY-NC-SA 4.0"
name         = ""
package-mode = false                                                         # this is an application, not library
readme       = "readme.md"
repository   = "https://github.com/9-FS/2022-01-26-Metric-METAR-for-Discord"
version      = "1.1.5"

[tool.poetry.dependencies]
discord          = "^2.3.2"
jsonpickle       = "^3.0.2"
kfsconfig        = "^1.0.0"
kfsconvert-to-si = "^1.0.0"
kfsfstr          = "^1.0.0"
kfslog           = "^1.0.0"
pandas           = "^2.1.0"
python           = "^3.11.0"
requests         = "^2.31.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.87.0"
pytest     = "^7.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core"]
